certs/hello-two/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-two
  namespace: h-two
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.kubernetes.io/enable: "true"
    acme.kubernetes.io/dns: dns_gd
spec: 
  tls:
  - hosts:
    - hellotwo.lustepe.xyz
    secretName: hello-tls
  rules:
    - host: hellotwo.lustepe.xyz
      http: 
        paths: 
          - pathType: Prefix
            path: /
            backend: 
              serviceName: hello-two
              servicePort: 81
